--- a/cinema-now-client/src/app/components/search-movie/search-movie.component.html
+++ b/cinema-now-client/src/app/components/search-movie/search-movie.component.html
@@ -15,4 +15,11 @@
       Movie Title
     </label>
   </div>
+  <div class="movies-list">
+    <app-movie-item
+      *ngFor="let movie of movies"
+      [movieDetails]="movie"
+    >
+    </app-movie-item>
+  </div>
 </div>
