--- a/cinema-now-client/src/app/components/movie-item/movie-item.component.scss
+++ b/cinema-now-client/src/app/components/movie-item/movie-item.component.scss
@@ -11,9 +11,11 @@
 
     .overview-section {
         border-bottom: 1px solid rgba(202, 7, 189, 0.87);
-        height: 340px;
+        height: 348px;
         padding: 5px;
         cursor: pointer;
+        overflow-y: scroll;
+        padding-bottom: 5px;
 
         img {
             width: 185px;
