--- a/cinema-now-client/src/app/components/movie-item/movie-item.component.html
+++ b/cinema-now-client/src/app/components/movie-item/movie-item.component.html
@@ -10,6 +10,18 @@
 			</div>
 	</div>
 	<div class="text-section other-details">
-		<div class="release-date">{{movieDetails.release_date}}</div>
+		<div class="release-date">
+			<span>
+				Release Date:
+			</span>
+			<span>
+				{{movieDetails.release_date}}
+			</span>
+		</div>
+		<div class="save-in-local float-right">
+			<i
+				title="Save Locally" 
+				class="material-icons">save_alt</i>
+		</div>
 	</div>
 </div>
