--- a/cinema-now-client/src/app/components/movie-item/movie-item.component.html
+++ b/cinema-now-client/src/app/components/movie-item/movie-item.component.html
@@ -20,8 +20,12 @@
 		</div>
 		<div class="save-in-local float-right">
 			<i
-				title="Save Locally" 
-				class="material-icons">save_alt</i>
+				[title]="movieDetails.isSavedInLocal ? 'Saved' : 'Save Locally'" 
+				class="material-icons"
+				(click)="!movieDetails.isSavedInLocal && triggerClickOnAction(movieDetails.id)"
+				[ngClass]="{'saved-in-local': movieDetails.isSavedInLocal}">
+				save_alt
+			</i>
 		</div>
 	</div>
 </div>
