--- a/cinema-now-client/src/app/components/theater-halls/theater-halls.component.html
+++ b/cinema-now-client/src/app/components/theater-halls/theater-halls.component.html
@@ -1,1 +1,5 @@
-<p>theater-halls works!</p>
+<mat-list class="halls-list">
+  <mat-list-item *ngFor="let hall of halls;"> 
+    {{ hall.name }} 
+  </mat-list-item>
+</mat-list>
