--- a/cinema-now-client/src/styles.scss
+++ b/cinema-now-client/src/styles.scss
@@ -13,7 +13,7 @@ h2, h3 {
 body {
   margin: 2em;
 }
-body, input[text], button {
+body ::ng-deep, input[text], button {
   color: #333;
   font-family: Cambria, Georgia, serif;
 }
