--- a/cinema-now-client/src/app/components/movie-item/movie-item.component.scss
+++ b/cinema-now-client/src/app/components/movie-item/movie-item.component.scss
@@ -78,6 +78,10 @@
 		i {
 			line-height: 39px;
 
+			&:hover {
+				color: rgb(114, 75, 241);
+			} 
+
 			&.saved-in-local {
 				color: rgb(114, 75, 241);
 				font-weight: bold;
