--- a/cinema-now-client/src/app/components/local-movies/local-movies.component.html
+++ b/cinema-now-client/src/app/components/local-movies/local-movies.component.html
@@ -5,14 +5,14 @@
   <i
     action
     title="Delete From Local" 
-    class="material-icons"
+    class="material-icons action"
     (click)="deleteLocalMovie(movie.id, movie.title)">
     delete
   </i>
   <i
     action
     title="Schedule A Show" 
-    class="material-icons"
+    class="material-icons action"
     (click)="openScheduleShowDialog(movie.id, movie.title)">
     date_range
   </i>
