--- a/cinema-now-client/src/app/components/cinema-shows/cinema-shows.component.html
+++ b/cinema-now-client/src/app/components/cinema-shows/cinema-shows.component.html
@@ -11,17 +11,35 @@
   <!-- Movie Column -->
   <ng-container matColumnDef="movieId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Movie </th>
-    <td mat-cell *matCellDef="let element"> {{element.movieId}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.movieId | movie}} </td>
   </ng-container>
   <!-- Hall Column -->
   <ng-container matColumnDef="hallId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Hall </th>
-    <td mat-cell *matCellDef="let element"> {{element.hallId}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.hallId | hall}} </td>
   </ng-container>
   <!-- Time Column -->
   <ng-container matColumnDef="timeId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Time </th>
-    <td mat-cell *matCellDef="let element"> {{element.timeId}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.timeId | time}} </td>
+  </ng-container>
+  <!-- Actions Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions </th>
+    <td mat-cell *matCellDef="let element">
+      <i
+      title="Delete Show" 
+      class="material-icons action"
+      >
+      delete
+    </i>
+    <i
+      title="Edit Show" 
+      class="material-icons action"
+      >
+      mode_edit
+    </i>
+    </td>
   </ng-container>
   
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
