--- a/cinema-now-client/src/app/components/schedule-show-dialog/schedule-show-dialog.component.html
+++ b/cinema-now-client/src/app/components/schedule-show-dialog/schedule-show-dialog.component.html
@@ -1,4 +1,8 @@
-<h1 mat-dialog-title>Schedule show - "{{data.movieTitle}}"</h1>
+<h1
+  class="dialog-title"
+  mat-dialog-title>
+  Schedule show - "{{data.movieTitle}}"
+</h1>
 <div mat-dialog-content
   class="dialog-content">
   <mat-form-field 
