--- a/cinema-now-client/src/app/components/cinema-shows/cinema-shows.component.html
+++ b/cinema-now-client/src/app/components/cinema-shows/cinema-shows.component.html
@@ -30,12 +30,13 @@
       <i
       title="Delete Show" 
       class="material-icons action"
-      >
+      (click)="deleteShow(element._id)">
       delete
     </i>
     <i
       title="Edit Show" 
       class="material-icons action"
+      (click)="editShow(element)"
       >
       mode_edit
     </i>
